snippets/Nemerle.Statechart/Tests/testsuite/positive/join_and_fork.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
[statechart(
  <#
  flags testing;
  name "join and fork";

  region A
  {
    state B
    {
    }

    state D
    {
    }
  } and
  {
    state C
    {
    }

    state E
    {
    }
    
    @(B, C): a => E, D;
  }


  #>)]
public class example
{

}

module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("B|C", ["A", "B", "C"]);
    tester.Test("a", "D|E", "ExitC", "ExitB", "EntryD", "EntryE");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
EntryB
EntryC
[B|C]
Ok
Processing a 'a' 
ExitC
ExitB
EntryD
EntryE
[D|E]
Ok
END-OUTPUT
*/
