snippets/Nemerle.Statechart/Tests/testsuite/negative/parent_state_not_found.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of example.
  /// </summary>
  [statechart(
  <#
  
  state A : B // E: Parent state "B" for state "A" not found
  {
  }
  
  #>)]
  public class example
  {
  }

